fix: adjust main layout to prevent overflow when sidebar is fixed

--- a/my-inventory/app/globals.css
+++ b/my-inventory/app/globals.css
@@ -6,6 +6,6 @@ body,
 .app {
   height: 100%;
   width: 100%;
-  @apply text-sm bg-gray-500 text-gray-900
+  @apply text-sm bg-red-500 text-gray-900
   
 }
